fix height problem on small devices

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -14,19 +14,6 @@ html {
     height: 100%;
 }
 
-/*@media(min-width:767px) {
-    .navbar {
-        padding: 20px 0;
-        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        transition: background .5s ease-in-out,padding .5s ease-in-out;
-    }
-
-    .top-nav-collapse {
-        padding: 0;
-    }
-}*/
-
 /* Demo Sections - You can use these as guides or delete them - the scroller will work with any sort of height, fixed, undefined, or percentage based.
 The padding is very important to make sure the scrollspy picks up the right area when scrolled to. Adjust the margin and padding of sections and children 
 of those sections to manage the look and feel of the site. */
@@ -64,4 +51,52 @@ of those sections to manage the look and feel of the site. */
     padding-top: 150px;
     text-align: center;
     background: #fff;
+}
+
+@media(max-width:768px) {
+/*    .navbar {
+        padding: 20px 0;
+        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        transition: background .5s ease-in-out,padding .5s ease-in-out;
+    }
+
+    .top-nav-collapse {
+        padding: 0;
+    }*/
+
+    .intro-section {
+        height: auto;
+        padding-top: 10%;
+        text-align: center;
+        background: #fff;
+    }
+
+    .about-section {
+        height: auto;
+        padding-top: 10%;
+        text-align: center;
+        background: #2EFE2E;
+    }
+
+    .method-section {
+        height: auto;
+        padding-top: 10%;
+        text-align: center;
+        background: #2E64FE;
+    }
+
+    .services-section {
+        height: auto;
+        padding-top: 10%;
+        text-align: center;
+        background: #FF8000;
+    }
+
+    .contact-section {
+        height: auto;
+        padding-top: 10%;
+        text-align: center;
+        background: #fff;
+    }
 }
